--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             background-size: 100% 100%;
         }
     </style>
-    <meta name="author" content="吴祖涛">
+    <meta name="author" content="wztlink1013">
     <meta name="keywords" content="秦时明月,天行九歌,历史">
     <meta name="description" content="以动漫为主线、历史为辅线">
     <meta name="robots" content="index,follow">
