改了一下视频的问题，引用了哔哩哔哩内嵌代码

--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
 
     <section class="aside-section">
         <h2 id="title4">视频介绍</h2>
-        <video controls height="240px" width="240px" src="movie/天行九歌.mp4" autoplay="autoplay" loop="loop"
-               muted="muted" ></video>
+        <iframe src="//player.bilibili.com/player.html?aid=370180354&bvid=BV1GZ4y1x75R&cid=176201991&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </section>
 
 </aside><article>
@@ -258,8 +257,7 @@
     <!--介绍秦时明月-->
     <aside>
             <section class="aside-section">
-                <video controls height="240px" width="240px" src="movie/秦时明月.mp4" autoplay="autoplay" loop="loop"
-                       muted="muted" ></video>
+                <iframe src="//player.bilibili.com/player.html?aid=840358426&bvid=BV1U54y197GV&cid=179564336&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
             </section>
         </aside><article>
             <section class="recommend">
