--- a/end.html
+++ b/end.html
@@ -53,8 +53,7 @@
 <!--内容：鸿门宴的视频-->
 <div id="content-wrapper" class="container">
     <div class="container" >
-        <video autoplay="autoplay" controls width="1000px" height="450px"  src="movie/鸿门宴3.mp4"  loop="loop"
-               muted="muted"></video>
+        <iframe src="//player.bilibili.com/player.html?aid=17623041&bvid=BV1aW411t7x1&cid=28766863&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" autoplay = true allowfullscreen="true"> </iframe>
     </div>
     <div class="container">
         <dv class="kuang">
