--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 
     <section class="aside-section">
         <h2 id="title4">视频介绍</h2>
+        <!-- 这个要改变视频样式 -->
         <video controls height="240px" width="240px" src="movie/天行九歌.mp4" autoplay="autoplay" loop="loop"
                muted="muted" ></video>
     </section>
